--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ a{
 			box-sizing: border-box; /* Opera/IE 8+ */
 }
 
-#preloader{
+/* #preloader{
     position: fixed;
     left: 0;
     top: 0;
@@ -123,7 +123,7 @@ a{
     width: 100%;
     z-index: 99999;
     display: flex;
-}
+} */
 /* #preloader:before, */
 /* #preloader:after{
     content: '';
@@ -138,11 +138,11 @@ a{
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
 } */
-#preloader:after{
+/* #preloader:after{
     left: auto;
     right: 0;
-}
-#preloader .loader_line{
+} */
+/* #preloader .loader_line{
     margin: auto;
     width: 1px;
     height: 250px;
@@ -184,7 +184,7 @@ a{
     -o-animation: lineround 1200ms linear 0s infinite;
     animation: lineround 1200ms linear 0s infinite;
     animation-delay: 2000ms;
-}
+} */
 
 @keyframes lineheight{
     0%{
